<resources>
    <string name="app_name">CalculadoraAplicacion</string>
    <string name="action_settings">Settings</string>
    <string name="str_number_1">Write number 1</string>
    <string name="str_number_2">Write number 2</string>
    <string name="btn_sum">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_pro">*</string>
    <string name="btn_div">/</string>
    <string name="required_field">Field could not be empty</string>
</resources>
