<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.edu.aulamatriz.calculadoraaplicacion.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNumber1"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_number_1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNumber2"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_number_2" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sum"
            android:onClick="procesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sum"
            tools:text="@string/btn_sum" />
        <Button
            android:id="@+id/btn_sub"
            android:onClick="procesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sub"
            tools:text="@string/btn_sub" />
        <Button
            android:id="@+id/btn_pro"
            android:onClick="procesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pro"
            tools:text="@string/btn_pro" />
        <Button
            android:id="@+id/btn_div"
            android:onClick="procesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_div"
            tools:text="@string/btn_div" />

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/txt_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>
